# rust-template-mysql

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  rustfmt.toml
migrations/: 20250226173051_users.sql
src/: app.rs  lib.rs
src/configs/: configs.rs  constants.rs  mod.rs
src/handlers/: api_key.rs  jwt.rs  mod.rs  users.rs
src/models/: users.rs
src/repositories/: db.rs  users.rs
src/serializes/: common.rs  error.rs  mod.rs
src/services/: users.rs
src/utils/: mod.rs
