[package]
name = "rust-template-mysql"
version = "0.1.0"
edition = "2021"
default-run = "app"

[package.metadata.clippy]
skip-deps = true

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
actix-rt = "2.9.0"
dotenv = "0.15.0"
rand = "0.8.5"
serde_json = "1.0.139"
serde = "1.0.218"
serde_derive = "1.0.218"
uuid = { version = "1.15.1", features = ["v4"] }
once_cell = "1.20.3"
config = "0.15.8"
jsonwebtoken = "9.3.1"
anyhow = "1.0.86"
log = "0.4.22"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "migrate",
    "macros",
    "chrono",
    "rust_decimal",
] }
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[[bin]]
name = "app"
path = "src/bin/app.rs"
